[package]
name = "dylink"
version = "0.9.1"
edition = "2021"
authors = ["Jonathan Thomason"]
license = "MIT OR Apache-2.0"
keywords = ["ffi", "dlopen", "load", "shared", "lazy"]
categories = ["api-bindings"]
description = "Run-time dynamic linking loader utilities"
repository = "https://github.com/Razordor/dylink.git"
publish = true

# TODO: Next version bump needs to make sure that this isn't required anymore.
[profile]
dev.panic = "unwind"
release.panic = "unwind"

[workspace]
members = ["dylink_macro"]

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dependencies.dylink_macro]
version = "0.9"
path="./dylink_macro"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true

[features]
# features still being tested. marked items must not be relied upon between versions.
unstable = []