[package]
name = "dylink"
version = "0.10.1"
edition = "2021"
authors = ["Jonathan Thomason"]
license = "MIT OR Apache-2.0"
keywords = ["ffi", "dlopen", "load", "shared", "lazy"]
categories = ["api-bindings"]
description = "Run-time dynamic linking loader utilities"
repository = "https://github.com/Razordor/dylink.git"
publish = false

[workspace]
members = ["dylink_macro"]

[dependencies.dylink_macro]
version = "0.11"
path="./dylink_macro"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true

[features]
# features still being tested. marked items must not be relied upon between versions.
unstable = []