# SPDX-FileCopyrightText: 2022-2026 Jonathan A. Thomason <contact@jonathan-thomason.com>
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "dylink"
version = "0.13.1"
edition = "2024"
authors = ["Jonathan Thomason"]
license = "MIT OR Apache-2.0"
keywords = ["ffi", "dlopen", "load", "shared", "lazy"]
categories = ["api-bindings"]
description = "Run-time dynamic linking loader utilities"
repository = "https://github.com/Razordor/dylink.git"
publish = true

[workspace]
members = ["dylink_macro"]

[dependencies.dylink_macro]
version = "0.11"
path="./dylink_macro"
optional = true

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true

[features]
derive = ["dep:dylink_macro"]

[dev-dependencies]
dylink = { path = ".", features = ["derive"] }
