[package]
name = "dylink_macro"
version = "0.5.0"
authors = ["Jonathan Thomason"]
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["ffi", "macro", "attribute"]
description = "Dynamic function loading attribute."
repository = "https://github.com/Razordor/dylink_macro.git"
publish = false

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"

[dependencies.quote]
version="1.0"
default-features=false


[dependencies.syn]
version = "2.0"
features = ["full", "parsing", "printing" ]
default-features=false


[features]
warnings = []
no_lifetimes = []
