[package]
name = "dylink_macro"
version = "0.6.0"
authors = ["Jonathan Thomason"]
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["ffi", "macro", "attribute"]
description = "Run-time dynamic linking loader attribute"
repository = "https://github.com/Razordor/dylink.git"
publish = false

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"

[dependencies.quote]
version="1.0"
default-features=false


[dependencies.syn]
version = "2.0"
features = ["full", "parsing", "printing"]
default-features=false


#[features]
# I'd prefer for this to be default, but it needs to be disabled 
# when the main crate also disables it.
#std = []
